Fixed :  Requery Configuration 에 setWriteExecutor 에 꼭 SingleThreadExecutor를 이용해야 합니다!!!
Known Bug : 아직 다음과 같은 버그를 해결하지 못했습니다 !!!

@Query(value = "SELECT * FROM SD_User")
Page<User> findByNativQueryWithPageable(Pageable pageable);

처럼 Declared Query 나 EntityDataStore#raw 함수 처럼 Direct 로 query가 진행되는 경우 transaction 에 묶이지 않아 제대로 값을 가져오지 못하는 경우가 있습니다.